# fluently

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/models/fasttext/: references.txt
backend/src/: config.py  dependencies.py  main.py
backend/src/routers/: health.py  translate.py
backend/src/services/: __init__.py  detection.py  translation.py
backend/src/utils/: language.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_translation_quality.py
backend/tests/fixtures/: translation_cases.json
backend/typings/fasttext/: __init__.py
docs/: API.md  ARCHITECTURE.md  ROADMAP.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: LanguageSelector.tsx  TranslatePage.tsx
frontend/src/hooks/: useTranslation.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
