[project]
name = "fluently"
version = "0.1.0"
description = "High-performance translation API powered by local AI inference."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "fasttext>=0.9.3",
    "openai>=2.20.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.9.0",
    "sacrebleu>=2.4.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pyright]
strict = ["src"]
stubPath = "typings"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "quality: translation quality evaluation (hits live API, slow)",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.uv]
# fasttext 0.9.3 is incompatible with pybind11>=3 (ssize_t, API changes).
# Use no-build-isolation so we can pre-install pybind11<3 before building.
no-build-isolation-package = ["fasttext"]
